--- a/Anjana Kuttamath.html
+++ b/Anjana Kuttamath.html
@@ -1,8 +1,70 @@
 <html>
     <head>
         <title>Anjana Kuttamath</title>
+        <style>
+            div{
+               background: blanchedalmond;
+            }
+            span{
+                /* background: red; */
+            }
+            strong{
+                background: pink;
+            }
+        .word1{
+            overflow: hidden;
+            color: #000;
+            text-align: center;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            -webkit-text-stroke-width: 1;
+            -webkit-text-stroke-color: #000;
+            font-family: "SKWAR TRIAL";
+            font-size: 50px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: normal;
+            text-transform: lowercase;
+        }
+        .word2{
+            overflow: hidden;
+            color: #CDD27D;
+            text-align: center;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            -webkit-text-stroke-width: 1;
+            -webkit-text-stroke-color: #000;
+            font-family: Sitka;
+            font-size: 60px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            text-decoration-line: underline;
+            text-transform: capitalize;
+        }
+        .word3{
+            overflow: hidden;
+            color: #883493;
+            text-align: center;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            text-shadow: 69px 112px 14.9px rgba(0, 0, 0, 0.20);
+            font-family: "SKWAR TRIAL";
+            font-size: 80px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: normal;
+            text-transform: capitalize;
+        }
+       
+    </style>
     </head>
+
     <body>
-        Nothing is Impossible
+        <div>
+            <div>
+                <span class="word1">Nothing</span> <span class="word2">is</span>  <strong class="word3">Impossible</strong>
+            </div>
+        </div>
     </body>
 </html>
