--- a/Anjana Kuttamath.html
+++ b/Anjana Kuttamath.html
@@ -6,7 +6,7 @@
                background: blanchedalmond;
             }
             span{
-                /* background: red; */
+                background: red;
             }
             strong{
                 background: pink;
