--- a/Anjana Kuttamath.html
+++ b/Anjana Kuttamath.html
@@ -6,7 +6,7 @@
                background: blanchedalmond;
             }
             span{
-                background: red;
+                background: rgb(227, 221, 221);
             }
             strong{
                 background: pink;
