--- a/AKPortfolio.html
+++ b/AKPortfolio.html
@@ -14,7 +14,7 @@
     <header>
         <img src="Samplelogo.png" class="logo">
         <h1 class="name">ANJANA KUTTAMATH</h1>
-        <a href="Hello World.html"> About </a>
+        <a href="About.html"> About </a>
         <a href="Anjana Kuttamath.html">Projects</a>
         <a href="Resume.pdf">Resume </a>
         <a href="https://www.linkedin.com/in/anjana-kuttamath-45893327b/"> linkedin </a>
