--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p1 class="description">
                 As a designer based in DC with a background in architecture,
                 I believe <br>"Great design is about understanding people and their needs". <br>My goal is to create
-                solutions that truly resonate with users, <br>crafting digital experiences that are both functional
+                solutions that truly resonate with users, crafting digital experiences <br>that are both functional
                 and delightful.
             </p1>
 
