--- a/About.html
+++ b/About.html
@@ -13,11 +13,15 @@
     <!-- header -->
     <header>
         <img src="Samplelogo.png" class="logo">
-        <h1 class="name">ANJANA KUTTAMATH</h1>
+        <a href="index.html" class="name-link">
+            <h1 class="name">ANJANA KUTTAMATH</h1>
+        </a>
+        
         <a href="About.html"> About </a>
         <a href="Anjana Kuttamath.html">Projects</a>
         <a href="Resume.pdf">Resume </a>
         <a href="https://www.linkedin.com/in/anjana-kuttamath-45893327b/"> linkedin </a>
+
 
     </header>
 
