--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 
     <!-- header -->
     <header>
-        <img src="Samplelogo.png" class="logo">
-        <a href="index.html" class="name-link">
-            <h1 class="name">ANJANA KUTTAMATH</h1>
-        </a>
-        
-        <a href="About.html"> About </a>
-        <a href="Anjana Kuttamath.html">Projects</a>
-        <a href="Resume.pdf">Resume </a>
-        <a href="https://www.linkedin.com/in/anjana-kuttamath-45893327b/"> linkedin </a>
+        <div class="logo-container">
+            <img src="Samplelogo.png" class="logo" alt="Logo">
+            <a href="index.html" class="name-link">ANJANA KUTTAMATH</a>
+        </div>
 
+        <nav class="nav-links">
+            <a href="About.html"> About </a>
+            <a href="Anjana Kuttamath.html">Projects</a>
+            <a href="Resume.pdf">Resume </a>
+            <a href="https://www.linkedin.com/in/anjana-kuttamath-45893327b/"> linkedin </a>
+        </nav>
 
     </header>
 
