--- a/About.html
+++ b/About.html
@@ -6,6 +6,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Doto:wght@100..900&family=Jaro:opsz@6..72&family=Nosifer&family=Parkinsans:wght@300..800&family=Platypi:ital,wght@0,300..800;1,300..800&family=Rammetto+One&family=Rubik+Glitch+Pop&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -28,45 +33,44 @@
 
     <section class="hello">
         <div class="hero-text">
-            <h1>HELLO.!</h1>
+            <h1>Hello..!</h1>
         </div>
     </section>
 
     <!-- im passionate -->
     <section class="passion">
         <h1> I'm Anjana Kuttamath,</h1>
-        <p> I'm passionateabout design because it merges creativity with problem-solving. Every project, whether in
-            architecture or
-            digital design, presents a unique challenge that pushes me to think critically and empathetically. My
+        <p> I'm passionate about design because it merges creativity with problem-solving. Every project presents a unique challenge <br>that pushes me to think critically and empathetically. My
             architectural background gives me a deep understanding of structure and form,<br> while my UX design skills
             allow me to craft seamless user experiences.</p>
     </section>
 
-
     <!-- whatido -->
     <section class="whatido">
+
         <h1>What I Do</h1>
-        <div class="cards">
-            <div class="card">
-                <h3>UX & Interaction Design</h3>
-                <p>I craft user flows, wireframes, and high-fidelity prototypes that deliver functional and
+             <div class="cards">
+                <div class="card">
+                     <h3>UX & Interaction Design</h3>
+                     <p>I craft user flows, wireframes, and high-fidelity prototypes that deliver functional and
                     aesthetically
                     pleasing digital solutions.
                     I am proficient with design tools such as Figma, Sketch, and Adobe XD.</p>
-            </div>
-            <div class="card">
-                <h3>User Research & Usability Testing</h3>
-                <p>I conduct in-depth user interviews and usability tests to inform my designs, <br>ensuring that every
+                </div>
+
+                <div class="card">
+                   <h3>User Research & Usability Testing</h3>
+                   <p>I conduct in-depth user interviews and usability tests to inform my designs, <br>ensuring that every
                     solution I create is backed by data and user insights.</p>
-            </div>
-            <div class="card">
-                <h3> Collaboration</h3>
-                <p>Working closely with product managers, engineers, and cross-functional teams, I ensure that every
+                </div>
+
+                <div class="card">
+                   <h3> Collaboration</h3>
+                   <p>Working closely with product managers, engineers, and cross-functional teams, I ensure that every
                     project I
                     contribute to meets user needs while aligning with business goals.</p>
-            </div>
-        </div>
-
+                </div>
+             </div>
 
     </section>
 </body>
