--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!-- header -->
     <header>
+
         <div class="logo-container">
             <img src="Samplelogo.png" class="logo" alt="Logo">
             <a href="index.html" class="name-link">ANJANA KUTTAMATH</a>
@@ -28,12 +29,15 @@
 
     <!-- section -->
     <section class="hero">
+
         <div class="hero-content">
+
             <p>Hey I'm</p>
             <h1>Anjana Kuttamath</h1>
             <h2>UI & UX Designer</h2>
+
             <p1 class="description">
-                As a designer based in DC with a background in architecture,
+                As a CREATIVE designer based in DC with also a background in architecture,
                 I believe <br>"Great design is about understanding people and their needs". <br>My goal is to create
                 solutions that truly resonate with users, crafting digital experiences <br>that are both functional
                 and delightful.
@@ -42,6 +46,8 @@
 
             <h3 class="mail">anjana.kuttamath9@gmail.com </h3>
             <h4 class="address">Washington,VA </h4>
+            <h3 class="subject">IxD Graduate Student </h3>
+            <h4 class="schoolname">GWU'2025 </h4>
 
         </div>
 
@@ -49,11 +55,11 @@
 
     <!-- im passionate -->
     <section class="passion">
-        <h1>I'm passionate</h1>
-        <p> about design because it merges creativity with problem-solving. Every project, whether in architecture or
-            digital design, <br>presents a unique challenge that pushes me to think critically and empathetically. My
-            architectural background gives me a deep understanding of structure and form,<br> while my UX design skills
-            allow me to craft seamless user experiences.</p>
+        <h1>I'm Passionate About Design</h1>
+        <p> Design, for me, is where creativity meets problem-solving.<br> Each project is a journey - a unique challenge that pushes me to think <br>critically, empathize deeply, and innovate boldly.<br> <br>"Design is my bridge between imagination and functionality".
+            <br> 
+            <br> My background in architecture provides a unique perspective on design, <br>emphasizing spatial thinking and user-centric solutions.
+        </p>
     </section>
 
     <!-- interaction -->
@@ -670,12 +676,13 @@
         <div class="fun"></div>
         <div class="fun"></div>
         <div class="fun"></div>
-        
+
     </section>
 
     <!-- whatido -->
     <section class="whatido">
         <h1>What I Do</h1>
+
         <div class="cards">
             <div class="card">
                 <h3>UX & Interaction Design</h3>
@@ -698,12 +705,7 @@
         </div>
 
 
-    </section>
 
-    <!-- namebar -->
-    <section class="namebar" >
-        <div class="subject">Interaction Design Graduate Student </div>
-        <div class="schoolname">George Washington university </div>
     </section>
 
     <!-- projects -->
@@ -728,35 +730,6 @@
             <h3>Product Design - Prototyping Interaction</h3>
         </div>
     </section>
-
-
-    <!-- 
-    <section class="passionate"> 
-        What do i do
-    </section> -->
-
-    <!-- <section class=hero1>
-        <div class="hero1-content">
-            <p> My Work </p>
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
-                src="https://embed.figma.com/design/RGTuQQEJvoQaerS96yjBsr/Untitled?node-id=0-1&embed-host=share"
-                allowfullscreen> Contact</iframe>
-        </div>
-        <div class="hero1-content2">
-            <p>My Passion</p>
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
-                src="https://embed.figma.com/design/RGTuQQEJvoQaerS96yjBsr/Untitled?node-id=0-1&embed-host=share"
-                allowfullscreen> Contact</iframe>
-
-        </div>
-    </section>
-    <section>
-        <div>Hello</div>
-        <div>welcome</div>
-        <div>seeyou</div>
-        <div></div>
-        <div></div>
-    </section> -->
 
 </body>
 
