--- a/About.html
+++ b/About.html
@@ -6,10 +6,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Doto:wght@100..900&family=Jaro:opsz@6..72&family=Nosifer&family=Parkinsans:wght@300..800&family=Platypi:ital,wght@0,300..800;1,300..800&family=Rammetto+One&family=Rubik+Glitch+Pop&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Doto:wght@100..900&family=Jaro:opsz@6..72&family=Nosifer&family=Parkinsans:wght@300..800&family=Platypi:ital,wght@0,300..800;1,300..800&family=Rammetto+One&family=Rubik+Glitch+Pop&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -31,6 +33,7 @@
 
     </header>
 
+    <!-- Hello -->
     <section class="hello">
         <div class="hero-text">
             <h1>Hello..!</h1>
@@ -40,39 +43,47 @@
     <!-- im passionate -->
     <section class="passion">
         <h1> I'm Anjana Kuttamath,</h1>
-        <p> I'm passionate about design because it merges creativity with problem-solving. Every project presents a unique challenge <br>that pushes me to think critically and empathetically. My
+        <p> I'm passionate about design because it merges creativity with problem-solving. Every project presents a
+            unique challenge <br>that pushes me to think critically and empathetically. My
             architectural background gives me a deep understanding of structure and form,<br> while my UX design skills
-            allow me to craft seamless user experiences.</p>
+            allow me to craft seamless user experiences, <br>blending creativity and technology to craft intuitive,
+            user-centric digital experiences.<br>
+            
+            <br> Proficient in tools like Figma and Adobe XD, I specialize in responsive
+            design, wireframing, and prototyping. <br>With a focus on empathy, research, and innovative thinking, I create
+            functional, meaningful interfaces <br>that solve problems and connect users with technology in delightful ways.
+        </p>
     </section>
 
     <!-- whatido -->
     <section class="whatido">
 
         <h1>What I Do</h1>
-             <div class="cards">
-                <div class="card">
-                     <h3>UX & Interaction Design</h3>
-                     <p>I craft user flows, wireframes, and high-fidelity prototypes that deliver functional and
+        <div class="cards">
+            <div class="card">
+                <h3>UX & Interaction Design</h3>
+                <p>I craft user flows, wireframes, and high-fidelity prototypes that deliver functional and
                     aesthetically
                     pleasing digital solutions.
                     I am proficient with design tools such as Figma, Sketch, and Adobe XD.</p>
-                </div>
+            </div>
 
-                <div class="card">
-                   <h3>User Research & Usability Testing</h3>
-                   <p>I conduct in-depth user interviews and usability tests to inform my designs, <br>ensuring that every
+            <div class="card">
+                <h3>User Research & Usability Testing</h3>
+                <p>I conduct in-depth user interviews and usability tests to inform my designs, <br>ensuring that every
                     solution I create is backed by data and user insights.</p>
-                </div>
+            </div>
 
-                <div class="card">
-                   <h3> Collaboration</h3>
-                   <p>Working closely with product managers, engineers, and cross-functional teams, I ensure that every
+            <div class="card">
+                <h3> Collaboration</h3>
+                <p>Working closely with product managers, engineers, and cross-functional teams, I ensure that every
                     project I
                     contribute to meets user needs while aligning with business goals.</p>
-                </div>
-             </div>
+            </div>
+        </div>
 
     </section>
+
 </body>
 
 </html>
