--- a/About.html
+++ b/About.html
@@ -19,14 +19,15 @@
 
     <!-- header -->
     <header>
+
         <div class="logo-container">
             <img src="Samplelogo.png" class="logo" alt="Logo">
             <a href="index.html" class="name-link">ANJANA KUTTAMATH</a>
         </div>
 
         <nav class="nav-links">
-            <a href="About.html"> About </a>
-            <a href="Anjana Kuttamath.html">Projects</a>
+            <a href="about.html"> About </a>
+            <a href="projects.html">Projects</a>
             <a href="Resume.pdf">Resume </a>
             <a href="https://www.linkedin.com/in/anjana-kuttamath-45893327b/"> linkedin </a>
         </nav>
@@ -48,10 +49,12 @@
             architectural background gives me a deep understanding of structure and form,<br> while my UX design skills
             allow me to craft seamless user experiences, <br>blending creativity and technology to craft intuitive,
             user-centric digital experiences.<br>
-            
+
             <br> Proficient in tools like Figma and Adobe XD, I specialize in responsive
-            design, wireframing, and prototyping. <br>With a focus on empathy, research, and innovative thinking, I create
-            functional, meaningful interfaces <br>that solve problems and connect users with technology in delightful ways.
+            design, wireframing, and prototyping. <br>With a focus on empathy, research, and innovative thinking, I
+            create
+            functional, meaningful interfaces <br>that solve problems and connect users with technology in delightful
+            ways.
         </p>
     </section>
 
@@ -83,7 +86,8 @@
         </div>
 
     </section>
-
+    
+    <script src="aboutpageinteraction.js"></script>
 </body>
 
 </html>
