--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
 
         <nav class="nav-links">
-            <a href="About.html"> About </a>
-            <a href="Anjana Kuttamath.html">Projects</a>
+            <a href="about.html"> About </a>
+            <a href="projects.html">Projects</a>
             <a href="Resume.pdf">Resume </a>
             <a href="https://www.linkedin.com/in/anjana-kuttamath-45893327b/"> linkedin </a>
         </nav>
@@ -710,25 +710,36 @@
 
     <!-- projects -->
     <section class="portfolio">
+        <a href="https://anjanakuttamath9.wixstudio.com/portfolio/project-title-04" target="_blank" rel="noopener noreferrer">
+
         <div class="portfolio-item">
             <img src="Kuttamathdance.jpg" alt="Kuttamath Dance">
             <h3>Website Design</h3>
         </div>
+        </a>
+        
+        <a href="https://anjanakuttamath9.wixstudio.com/portfolio/project-title-02" target="_blank" rel="noopener noreferrer">
+            <div class="portfolio-item">
+            
+                <img src="Tyrone.jpg" alt="Tyrone Interactive Catalog">
+                <h3>Interactive Journey Catalog</h3>
+            </div>
+        </a>
 
-        <div class="portfolio-item">
-            <img src="Tyrone.jpg" alt="Tyrone Interactive Catalog">
-            <h3>Interactive Journey Catalog</h3>
-        </div>
+        <a href="https://anjanakuttamath9.wixstudio.com/portfolio/project-title-03" target="_blank" rel="noopener noreferrer">
 
-        <div class="portfolio-item">
-            <img src="Zerozest.jpg" alt="ZeroZest App">
-            <h3>App Design</h3>
-        </div>
+            <div class="portfolio-item">
+                <img src="Zerozest.jpg" alt="ZeroZest App">
+                <h3>App Design</h3>
+            </div>
+        </a> 
 
-        <div class="portfolio-item">
-            <img src="Productdesign.jpg" alt="Product Design">
-            <h3>Product Design - Prototyping Interaction</h3>
-        </div>
+        <a href="https://anjanakuttamath9.wixstudio.com/portfolio/project-title-04-1-1-1-1" target="_blank" rel="noopener noreferrer">
+            <div class="portfolio-item">
+                <img src="Productdesign.jpg" alt="Product Design">
+                <h3>Product Design - Prototyping Interaction</h3>
+            </div>
+        </a>
     </section>
 
 </body>
