--- a/About.html
+++ b/About.html
@@ -28,7 +28,7 @@
         <nav class="nav-links">
             <a href="about.html"> About </a>
             <a href="projects.html">Projects</a>
-            <a href="Resume.pdf">Resume </a>
+            <a href="resume.html">Resume </a>
             <a href="https://www.linkedin.com/in/anjana-kuttamath-45893327b/"> linkedin </a>
         </nav>
 
@@ -86,7 +86,7 @@
         </div>
 
     </section>
-    
+
     <script src="aboutpageinteraction.js"></script>
 </body>
 
