--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="nav-links">
             <a href="about.html"> About </a>
             <a href="projects.html">Projects</a>
-            <a href="Resume.pdf">Resume </a>
+            <a href="resume.html">Resume </a>
             <a href="https://www.linkedin.com/in/anjana-kuttamath-45893327b/"> linkedin </a>
         </nav>
 
@@ -740,6 +740,7 @@
                 <h3>Product Design - Prototyping Interaction</h3>
             </div>
         </a>
+        
     </section>
 
 </body>
