--- a/About.html
+++ b/About.html
@@ -86,6 +86,31 @@
         </div>
 
     </section>
+    <!-- profession journey -->
+    <section class="profjourney">
+        <div class="text">
+            <h1>My Professional Journey:</h1>
+            <p>
+                I began my journey as an architect, earning my degree and working at Formstudios for two years, where I
+                honed my
+                skills in creating spaces that balance functionality and aesthetics. My passion for design and
+                innovation
+                eventually led me to transition into interactive design. Now, I bring my architectural expertise into
+                crafting
+                intuitive and engaging digital experiences. This unique background allows me to approach design
+                challenges
+                holistically, bridging the gap between physical spaces and digital interfaces.
+            </p>
+        </div>
+
+        <div class="image">
+            <a href="https://issuu.com/anjanakuttamath5281/docs/masters_portfolio11_compressed" target="_blank" rel="noopener noreferrer">
+
+            <img src="Archportfolio.jpg" alt="Architectural Portfolio">
+            </a>
+        </div>
+
+    </section>
 
     <script src="aboutpageinteraction.js"></script>
 </body>
