--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
     <!-- interaction -->
     <section class="interaction">
+        <p>move around </p>
 
         <div class="fun"></div>
         <div class="fun"></div>
@@ -745,4 +746,4 @@
 
 </body>
 
-</html>
+</html>  
