--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
     <section class="text" >
         <h1>Resume</h1>
         <p> FInd my <span class="designed">"Designed"</span> as well as <span class="basic">"Basic"</span> resume 😊  </p>
-        <p1>(Feel free to explore by zooming, panning, and viewing in full-screen mode..)</p1>
+        <span class="description">(Feel free to explore by zooming, panning, and viewing in full-screen mode..)</span>
     </section>
    
     <section class="resume">
