--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             <h1>Anjana Kuttamath</h1>
             <h2>UI & UX Designer</h2>
 
-            <p1 class="description">
+            <p class="description">
                 As a CREATIVE designer based in DC with also a background in architecture,
                 I believe <br>"Great design is about understanding people and their needs". <br>My goal is to create
                 solutions that truly resonate with users, crafting digital experiences <br>that are both functional
                 and delightful.
-            </p1>
+            </p>
 
 
             <h3 class="mail">anjana.kuttamath9@gmail.com </h3>
